--- a/eureka-server-development.yml
+++ b/eureka-server-development.yml
@@ -1,6 +1,8 @@
+server:
+  port: 8081
 eureka:
   client:
     fetch-registry: false
     register-with-eureka: false
-server:
-  port: 8081
+    service-url:
+      defaultZone: ${EUREKA_URI:http://localhost:8081/eureka}
